robobear 1.0.6: stop handing out rounds nobody can win
Three faults from one playtest, all of them ways a round arrives
already lost.

The safe and the greedy offer could be the same job. Each slot was
rolled independently with nothing comparing it to the last, so a
round could put "break 30 iron ore in quartz" beside "break 55 iron
ore in quartz" and call it a choice. Offers are now distinct in what
they ask for; the amount deliberately isn't part of the comparison,
since differing only in price is the case being rejected. Where a
server really can only build one job, one offer is made rather than
two of it.

A material objective could still name something its mine doesn't
contain. 1.0.5 fixed the selection — mine first, material from that
mine — but left a fallback that handed back the whole config list
whenever a mine's contents were unknown, which on a server where
nothing reports its composition is every mine, every time. That is
how the quartz mine came to be asked for deepslate iron ore.

Mines are now read first-hand. A stride is walked across each region
and the blocks are counted, so composition no longer depends on the
mine plugin exposing it. The stride widens with the mine so the cost
is a fixed budget of reads whatever the size, unloaded chunks are
skipped rather than pulled in, and it runs on the existing slow
refresh. The config list is only assumed now when nothing anywhere
can be read at all.

And the curve asked for more than a mine holds. Amounts scaled off
the round number alone, so a mine of two stacks refilling every five
minutes could be asked for 250 — not a hard round, a round that ends
the climb. The same survey sizes each mine's stock, and an amount is
trimmed to that stock times how often it refills times the share one
job may claim. A mine too thin for even the smallest job is passed
over instead of being set an impossible one.

The quest editor now shows what a mine holds, so a job that came out
smaller than its round doesn't read as a